adjusts line hight of nav links to correct spacing of border bottom hover effect

--- a/app/assets/stylesheets/theme/_nav.scss
+++ b/app/assets/stylesheets/theme/_nav.scss
@@ -125,7 +125,7 @@ header.navigation {
       color: $navigation-color;
       display: inline-block;
       text-decoration: none;
-
+      line-height: 1.5;
 
       @include media ($horizontal-bar-mode) {
         padding-right: 0em;
